# capybarka

./: .gitignore  README.md  package.json  pnpm-lock.yaml  ui.config.json
backend/: .dockerignore  Dockerfile  Makefile  compose.yml  pyproject.toml
backend/deploy/gunicorn/: gunicorn_conf.py
backend/deploy/nginx/: nginx.conf  nginx.json-logging.conf
backend/deploy/supervisor/: supervisord.conf
backend/src/: main.py  serve.py  urls.py
backend/src/config/: settings.py
backend/src/configs/: settings.py
backend/src/configs/development/: settings.py
backend/src/domain/events/: __init__.py  base.py  messages.py
backend/src/domain/exceptions/: base.py  message.py
backend/src/domain/services/: __init__.py  login_service.py  setup_connection_with_user.py
backend/src/domain/services/connections_manager/: __init__.py  base.py  connection_manager.py
backend/src/domain/values/: __init__.py  base.py  messages.py
backend/src/infra/: app.py  container.py
backend/src/infra/daos/: __init__.py  auth_dao.py  connection_dao.py  user_dao.py
backend/src/infra/daos/connections/: __init__.py  base.py  in_memory_connections.py
backend/src/infra/daos/connections_dao/: __init__.py  base.py  connections_dao.py
backend/src/infra/daos/user/: __init__.py  base.py  exceptions.py  user.py
backend/src/infra/database/: __init__.py  database.py
backend/src/infra/database/models/: __init__.py  base.py  user.py
backend/src/infra/dtos/: __init__.py  users_dto.py  users_dtos.py
backend/src/infra/event_bus/: kafka_factory.py  producer.py
backend/src/infra/events/: base.py  messages.py
backend/src/infra/factories/: services.py
backend/src/infra/message_brokers/: __init__.py  base.py  kafka.py
backend/src/infra/migrations/: 1_account.sql  account.sql  user_1.sql
backend/src/infra/repo/: __init__.py  user_repo.py
backend/src/infra/repositories/: __init__.py
backend/src/infra/repositories/connections/: __init__.py  base.py  in_memory.py
backend/src/infra/views/: __init__.py  auth_views.py  router.py
backend/src/infra/views/auth/: __init__.py  auth_views.py  login.py
backend/src/infra/views/ws_event_handler/: __init__.py  ws_event_handler.py
backend/vars/: dev.env
frontend/: package.json  pnpm-lock.yaml  tailwind.config.cjs  ui.config.json  vite.config.ts
frontend/src/: App.css  index.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
src/: App.css  App.tsx  routes.tsx
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Message.tsx  NavBar.tsx
src/hooks/: useWebsockets.tsx
src/interfaces/: index.ts
src/pages/: constants.ts
src/routes/: index.tsx
(+16 files in other folders)
