[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["nnnLik <rslmakhmudov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "0.32.0"
ipython = "8.28.0"
sanic = "24.6.0"
mayim = {extras = ["postgres"], version = "1.1.0"}
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
sanic-ext = "^23.12.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}


[tool.poetry.group.dev.dependencies]
ruff = "0.7.0"
pytest = "8.3.3"
mypy = "1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
