[package]
name = "capybarka"
version = "0.1.0"
description = "Chatik"
authors = ["Rasul Makhmudov"]
edition = "2021"

[lib]
name = "capybarka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-websocket = "2"
tauri-plugin-http = "2"
